--- a/ivy.xml
+++ b/ivy.xml
@@ -16,5 +16,7 @@
         <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-servlet-api -->
         <dependency org="org.apache.tomcat" name="tomcat-servlet-api" rev="9.0.107" transitive="false" conf="api->default"/>
         <dependency org="junit" name="junit" rev="4.13.2" conf="test->default"/>
+        <!-- AssertJ Swing for GUI testing -->
+        <dependency org="org.assertj" name="assertj-swing-junit" rev="3.17.1" conf="test->default"/>
     </dependencies>
 </ivy-module>
