--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -65,6 +65,10 @@ jobs:
         working-directory: ./SUMOjEdit
         run: ant
 
+      - name: Run SUMOjEdit Unit Tests
+        working-directory: ./SUMOjEdit
+        run: ant test.unit
+
       - name: Upload sumojedit-base
         uses: actions/upload-artifact@v4
         with:
