--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -110,9 +110,14 @@ jobs:
           <constituent filename="domainEnglishFormat.kif"\/>\n
           <\/kb>' $SIGMA_HOME/KBs/config.xml
 
-      - name: Run unit tests
+      - name: Install Xvfb (virtual display for GUI tests)
+        run: |
+          apt-get update
+          apt-get install -y xvfb
+
+      - name: Run SUMOjEdit Unit Tests (with virtual display to accommodate for GUI Tests)
         working-directory: ./SUMOjEdit
-        run: ant test.unit
+        run: xvfb-run -a ant test.unit
 
 #      - name: Run integration tests
 #        env:
