--- a/build.xml
+++ b/build.xml
@@ -317,7 +317,7 @@ alias jedit="java -Xmx10g -Xss1m -jar $JEDIT_JAR"
             <classpath>
                 <path refid="run.test.classpath"/>
             </classpath>
-            <test name="${unit.test.suite}" haltonfailure="no" todir="${reports.dir}">
+            <test name="${unit.test.suite}" haltonfailure="yes" todir="${reports.dir}">
                 <formatter type="xml"/>
             </test>
         </junit>
@@ -333,7 +333,7 @@ alias jedit="java -Xmx10g -Xss1m -jar $JEDIT_JAR"
             <classpath>
                 <path refid="run.test.classpath"/>
             </classpath>
-            <test name="${integration.test.suite}" haltonfailure="no" todir="${reports.dir}">
+            <test name="${integration.test.suite}" haltonfailure="yes" todir="${reports.dir}">
                 <formatter type="xml"/>
             </test>
         </junit>
