[Simon] Github CI Workflow Update: Enabled GUI Unit Tests

--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -106,10 +106,10 @@ jobs:
           <constituent filename="domainEnglishFormat.kif"\/>\n
           <\/kb>' $SIGMA_HOME/KBs/config.xml
 
-      - name: Install GUI dependencies (Xvfb + libXtst)
+      - name: Install GUI dependencies (Xvfb + libXtst + libXi)
         run: |
           apt-get update
-          apt-get install -y xvfb libxtst6
+          apt-get install -y xvfb libxtst6 libxi6
 
       - name: Run SUMOjEdit Unit Tests (with virtual display to accommodate for GUI Tests)
         working-directory: ./SUMOjEdit
